# jalan-hotel-finder

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: area-route-drift.yml  ci-test.yml
data/: candidate_hotels.csv
docs/: CLI仕様書.md  じゃらん仕様調査.md  実装TODOワークリスト.md  技術アーキテクチャ設計書.md
scripts/: detect_area_xml_route_drift.py
src/jalan_hotel_finder/: __init__.py
src/jalan_hotel_finder/application/: __init__.py  area_routes.py  input_models.py  pagination.py  query_builder.py  search_services.py
src/jalan_hotel_finder/cli/: __init__.py  app.py
src/jalan_hotel_finder/domain/: __init__.py  hotel_deduplication.py  name_matching.py
src/jalan_hotel_finder/infrastructure/: access_control.py  area_xml_resolver.py  coupon_name_resolver.py  crawler.py  hotel_card_extractor.py
src/jalan_hotel_finder/output/: __init__.py  json_formatter.py
tests/application/: test_input_models.py  test_pagination.py  test_query_builder.py  test_search_services.py
tests/cli/: test_cli_commands.py
tests/domain/: test_hotel_deduplication.py  test_name_matching.py
tests/fixtures/html/: coupon_source_discount_sample.html  hotel_cards_coupon_uww1405.html  hotel_cards_faq_noise_only.html  (+6 more)
tests/infrastructure/: test_access_control.py  test_area_xml_resolver.py  test_coupon_name_resolver.py  test_crawler.py  test_hotel_card_extractor.py
tests/integration/: test_cli_e2e_happy_path.py  test_end_to_end_mocked.py
tests/output/: test_json_formatter.py
tests/scripts/: test_detect_area_xml_route_drift.py
tests/smoke/: test_imports.py
(+6 files in other folders)
